--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-.axis path,
+/*.axis path,
 .axis line {
     fill: none;
     stroke: black;
@@ -15,4 +15,26 @@
     font-family: sans-serif;
     font-size: 1.5em;
     font-weight: bold;
+}*/
+.map {
+    border: medium solid #999;
 }
+
+
+
+.county {
+    fill: #fff;
+    stroke: #CCC;
+    stroke-width: 2px;
+}
+
+/*
+.gratLines {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+}
+
+.gratBackground {
+    fill: #D5E3FF;
+}*/
