--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@
     stroke: #CCC;
     stroke-width: 2px;
 }
+.area {
+    fill: #fff;
+    stroke: #CCC;
+
+}
+
 /*
 .gratLines {
     fill: none;
