--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,58 @@
-/*.axis path,
-.axis line {
-    fill: none;
-    stroke: black;
-    stroke-width: 1px;
-    shape-rendering: crispEdges;
-}
-.axis text {
-    font-family: sans-serif;
-    font-size: 0.9em;
-}
-.title {
-    font-family: sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-}*/
 .map {
     border: medium solid #999;
+    margin: 10px 0 0 20px;
 }
 .county {
-    fill: #fff;
-    stroke: #CCC;
-    stroke-width: 2px;
+    stroke: #000;
+    stroke-width: 0.5px;
+    stroke-linecap: round;
 }
 .area {
-    fill: #fff;
-    stroke: #CCC;
-
+    fill: #FFFFE0;
+    stroke: #999;
 }
-
-/*
 .gratLines {
     fill: none;
     stroke: #999;
     stroke-width: 1px;
 }
-
 .gratBackground {
     fill: #D5E3FF;
-}*/
+}
+.chart {
+    background-color: rgba(128,128,128,.2);
+    border: medium solid#999;
+    float: right;
+    margin: 10px 20px 0 0;
+}
+.numbers {
+    fill:#000;
+    font-family: sans-serif;
+}
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+}
+.chartFrame {
+    fill: none;
+    stroke: #999;
+    stroke-width: 3px;
+    shape-rendering: crispEdges;
+}
+.chartBackground {
+    fill: rgba(128,128,128,.2);
+}
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+    shape-rendering: crispEdges;
+}
+.axis text {
+    font-family: sans-serif;
+    font-size: 0.8em;
+    fill: #999;
+}
+
