--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+body{
+    background-color: #ebebe0;
+}
+
+h1{
+    color:black;
+    padding-left: 45px;
+
+}
+
 .map {
     border: medium solid #999;
     margin: 10px 0 0 20px;
@@ -8,22 +18,17 @@
     stroke-linecap: round;
 }
 .area {
-    fill: #FFFFE0;
-    stroke: #999;
+    fill: rgb(185, 161, 131, 0.80);
+    opacity: 10;
+    stroke: #a09a93;
 }
 .gratLines {
     fill: none;
-    stroke: #999;
+    stroke: grey;
     stroke-width: 1px;
 }
 .gratBackground {
     fill: #D5E3FF;
-}
-.chart {
-    background-color: rgba(128,128,128,.2);
-    border: medium solid#999;
-    float: right;
-    margin: 10px 20px 0 0;
 }
 .numbers {
     fill:#000;
@@ -31,8 +36,9 @@
 }
 .chartTitle {
     font-family: sans-serif;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-weight: bold;
+    text-align: center;
 }
 .chartFrame {
     fill: none;
@@ -41,7 +47,7 @@
     shape-rendering: crispEdges;
 }
 .chartBackground {
-    fill: rgba(128,128,128,.2);
+    fill: #a09a93;
 }
 .axis path,
 .axis line {
@@ -53,6 +59,44 @@
 .axis text {
     font-family: sans-serif;
     font-size: 0.8em;
-    fill: #999;
+    fill: rgb(14, 13, 13);
 }
+.dropdown {
+    position: absolute;
+    top: 100px;
+    left: 40px;
+    z-index: 10;
+    font-family: sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px #999;
+    box-shadow: 2px 2px 4px #999;
+    background-color:light grey;
+}
+option {
+    font-weight: normal;
+}
+
+.infolabel h1 {
+    margin: 0 20px 0 0;
+    padding: 0;
+    display: inline-block;
+    line-height: 1em;
+    font-size: medium;
+    color: #fff;
+}
+
+.infolabel {
+    margin: 0 20px 0 0;
+    position: absolute;
+    height: 50px;
+    min-width: 100px;
+    color: #fff;
+    background-color: rgb(80, 76, 76);
+    border: solid thin #fff;
+    padding: 5px 10px;
+    top: -75px;
+}
+
 
