--- a/css/style.css
+++ b/css/style.css
@@ -83,15 +83,15 @@ option {
     padding: 0;
     display: inline-block;
     line-height: 1em;
-    font-size: medium;
+    font-size: small;
     color: #fff;
 }
 
 .infolabel {
-    margin: 0 20px 0 0;
+    margin: 0 15px 0 0;
     position: absolute;
-    height: 50px;
-    min-width: 100px;
+    height: 30px;
+    min-width: 80px;
     color: #fff;
     background-color: rgb(80, 76, 76);
     border: solid thin #fff;
